--- a/Abdur Robi Alfian/style.css
+++ b/Abdur Robi Alfian/style.css
@@ -18,7 +18,7 @@ body{
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    background-color: #4ad0ee1b; 
+    background-image: url(galaxy.gif);
     color: white;
 }
 
